# azure-storage-cpp

./: README.md
Microsoft.WindowsAzure.Storage/: CMakeLists.txt
